force-app/main/default/objects/Customer_Visit_History__c/fields/CCXR_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Customer_Id__c</fullName>
    <label>CCXR_Customer Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>