force-app/main/default/objects/Customer_Visit_History__c/fields/CCXR_Customer_Visited_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Customer_Visited_Date_and_Time__c</fullName>
    <label>CCXR_Customer Visited Date and Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>