force-app/main/default/objects/Customer_Visit_History__c/fields/CCXR_Number_Of_Persons__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Number_Of_Persons__c</fullName>
    <label>CCXR_Number Of Persons</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>